--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!--
     - custom css link
   -->
-  <link rel="stylesheet" href="C:\Users\saruu\.vscode\My_Portfolio_website\style.css">
+  <link rel="stylesheet" href="style.css">
 
   <!--
     - google font link
@@ -1204,7 +1204,7 @@ Let’s collaborate and bring ideas to life!</p>
   <!--
     - custom js link
   -->
-  <script src="C:\Users\saruu\.vscode\My_Portfolio_website\script.js"></script>
+  <script src="script.js"></script>
 
   <!--
     - ionicon link
