Images path update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="C:\Users\saruu\OneDrive\Desktop\logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="Assests/logo.ico" type="image/x-icon">
 
   <!--
     - custom css link
@@ -44,7 +44,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="C:\Users\saruu\OneDrive\Desktop\my-avatar.png" alt="Anas Khalid" width="80">
+          <img src="Assests/my-avatar.png" alt="Anas Khalid" width="80">
         </figure>
 
         <div class="info-content">
@@ -241,7 +241,7 @@ Let’s collaborate and bring ideas to life!</p>
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="C:\Users\saruu\OneDrive\Desktop\icon-design.svg" alt="design icon" width="40">
+                <img src="Assests/icon-design.svg" alt="design icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -257,7 +257,7 @@ Let’s collaborate and bring ideas to life!</p>
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="C:\Users\saruu\OneDrive\Desktop\icon-dev.svg" alt="Web development icon" width="40">
+                <img src="Assests/icon-dev.svg" alt="Web development icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -273,7 +273,7 @@ Let’s collaborate and bring ideas to life!</p>
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="C:\Users\saruu\OneDrive\Desktop\icon-app.svg" alt="mobile app icon" width="40">
+                <img src="Assests/icon-app.svg" alt="mobile app icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -289,7 +289,7 @@ Let’s collaborate and bring ideas to life!</p>
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="C:\Users\saruu\OneDrive\Desktop\icon-photo.svg" alt="camera icon" width="40">
+                <img src="Assests/icon-photo.svg" alt="camera icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -321,7 +321,7 @@ Let’s collaborate and bring ideas to life!</p>
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="C:\Users\saruu\OneDrive\Desktop\avatar-1.png" alt="Daniel lewis" width="60" data-testimonials-avatar>
+                  <img src="Assests/avatar-1.png" alt="Daniel lewis" width="60" data-testimonials-avatar>
                 </figure>
 
                 <h4 class="h4 testimonials-item-title" data-testimonials-title>Daniel lewis</h4>
@@ -343,7 +343,7 @@ Let’s collaborate and bring ideas to life!</p>
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="C:\Users\saruu\OneDrive\Desktop\avatar-2.png" alt="Jessica miller" width="60" data-testimonials-avatar>
+                  <img src="Assests/avatar-2.png" alt="Jessica miller" width="60" data-testimonials-avatar>
                 </figure>
 
                 <h4 class="h4 testimonials-item-title" data-testimonials-title>Jessica miller</h4>
@@ -365,7 +365,7 @@ Let’s collaborate and bring ideas to life!</p>
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="C:\Users\saruu\OneDrive\Desktop\avatar-3.png" alt="Emily evans" width="60" data-testimonials-avatar>
+                  <img src="Assests/avatar-3.png" alt="Emily evans" width="60" data-testimonials-avatar>
                 </figure>
 
                 <h4 class="h4 testimonials-item-title" data-testimonials-title>Emily evans</h4>
@@ -387,7 +387,7 @@ Let’s collaborate and bring ideas to life!</p>
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="C:\Users\saruu\OneDrive\Desktop\avatar-4.png" alt="Henry william" width="60" data-testimonials-avatar>
+                  <img src="Assests/avatar-4.png" alt="Henry william" width="60" data-testimonials-avatar>
                 </figure>
 
                 <h4 class="h4 testimonials-item-title" data-testimonials-title>Henry william</h4>
@@ -426,10 +426,10 @@ Let’s collaborate and bring ideas to life!</p>
 
             <div class="modal-img-wrapper">
               <figure class="modal-avatar-box">
-                <img src="C:\Users\saruu\OneDrive\Desktop\avatar-1.png" alt="Daniel lewis" width="80" data-modal-img>
+                <img src="Assests/avatar-1.png" alt="Daniel lewis" width="80" data-modal-img>
               </figure>
 
-              <img src="C:\Users\saruu\OneDrive\Desktop\icon-quote.svg" alt="quote icon">
+              <img src="Assests/icon-quote.svg" alt="quote icon">
             </div>
 
             <div class="modal-content">
@@ -467,37 +467,37 @@ Let’s collaborate and bring ideas to life!</p>
 
             <li class="clients-item">
               <a href="#">
-                <img src="C:\Users\saruu\OneDrive\Desktop\shalimar-logo-og-img.png" alt="client logo">
+                <img src="Assests/shalimar-logo-og-img.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="C:\Users\saruu\OneDrive\Desktop\xAjmal-Perfumes-Logo.webp.pagespeed.ic.gw-oXxWJ18.webp" alt="client logo">
+                <img src="Assests/xAjmal-Perfumes-Logo.webp.pagespeed.ic.gw-oXxWJ18.webp" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="C:\Users\saruu\OneDrive\Desktop\royalenfield-logo-freelogovectors.net_.png" alt="client logo">
+                <img src="Assests/royalenfield-logo-freelogovectors.net_.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="C:\Users\saruu\OneDrive\Desktop\CLPLogo.png" alt="client logo">
+                <img src="Assests/CLPLogo.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="C:\Users\saruu\OneDrive\Desktop\logo-6-color.png" alt="client logo">
+                <img src="Assests/logo-6-color.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="C:\Users\saruu\OneDrive\Desktop\indian-army-logo-9D07F8822D-seeklogo.com.png" alt="client logo">
+                <img src="Assests/indian-army-logo-9D07F8822D-seeklogo.com.png" alt="client logo">
               </a>
             </li>
 
@@ -791,7 +791,7 @@ Let’s collaborate and bring ideas to life!</p>
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="C:\Users\saruu\OneDrive\Desktop\project-1.jpg" alt="finance" loading="lazy">
+                  <img src="Assests/project-1.jpg" alt="finance" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Finance</h3>
@@ -809,7 +809,7 @@ Let’s collaborate and bring ideas to life!</p>
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="C:\Users\saruu\OneDrive\Desktop\project-2.png" alt="orizon" loading="lazy">
+                  <img src="Assests/project-2.png" alt="orizon" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Orizon</h3>
@@ -827,7 +827,7 @@ Let’s collaborate and bring ideas to life!</p>
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="C:\Users\saruu\OneDrive\Desktop\project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="Assests/project-3.jpg" alt="fundo" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Fundo</h3>
@@ -845,7 +845,7 @@ Let’s collaborate and bring ideas to life!</p>
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="C:\Users\saruu\OneDrive\Desktop\project-4.png" alt="brawlhalla" loading="lazy">
+                  <img src="Assests/project-4.png" alt="brawlhalla" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Brawlhalla</h3>
@@ -863,7 +863,7 @@ Let’s collaborate and bring ideas to life!</p>
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="C:\Users\saruu\OneDrive\Desktop\project-5.png" alt="dsm." loading="lazy">
+                  <img src="Assests/project-5.png" alt="dsm." loading="lazy">
                 </figure>
 
                 <h3 class="project-title">DSM.</h3>
@@ -881,7 +881,7 @@ Let’s collaborate and bring ideas to life!</p>
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="C:\Users\saruu\OneDrive\Desktop\project-6.png" alt="metaspark" loading="lazy">
+                  <img src="Assests/project-6.png" alt="metaspark" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">MetaSpark</h3>
@@ -899,7 +899,7 @@ Let’s collaborate and bring ideas to life!</p>
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="C:\Users\saruu\OneDrive\Desktop\project-9.png" alt="summary" loading="lazy">
+                  <img src="Assests/project-9.png" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Summary</h3>
@@ -917,7 +917,7 @@ Let’s collaborate and bring ideas to life!</p>
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="C:\Users\saruu\OneDrive\Desktop\project-8.jpg" alt="task manager" loading="lazy">
+                  <img src="Assests/project-8.jpg" alt="task manager" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Task Manager</h3>
@@ -935,7 +935,7 @@ Let’s collaborate and bring ideas to life!</p>
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="C:\Users\saruu\OneDrive\Desktop\project-7.png" alt="arrival" loading="lazy">
+                  <img src="Assests/project-7.png" alt="arrival" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Arrival</h3>
@@ -973,7 +973,7 @@ Let’s collaborate and bring ideas to life!</p>
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="C:\Users\saruu\OneDrive\Desktop\blog-1.jpg" alt="Design conferences in 2022" loading="lazy">
+                  <img src="Assests/blog-1.jpg" alt="Design conferences in 2022" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
@@ -1001,7 +1001,7 @@ Let’s collaborate and bring ideas to life!</p>
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="C:\Users\saruu\OneDrive\Desktop\blog-2.jpg" alt="Best fonts every designer" loading="lazy">
+                  <img src="Assests/blog-2.jpg" alt="Best fonts every designer" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
@@ -1087,7 +1087,7 @@ Let’s collaborate and bring ideas to life!</p>
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="C:\Users\saruu\OneDrive\Desktop\blog-5.jpg" alt="The forgotten art of spacing" loading="lazy">
+                  <img src="Assests/blog-5.jpg" alt="The forgotten art of spacing" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
@@ -1115,7 +1115,7 @@ Let’s collaborate and bring ideas to life!</p>
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="C:\Users\saruu\OneDrive\Desktop\blog-6.jpg" alt="Design digest #75" loading="lazy">
+                  <img src="Assests/blog-6.jpg" alt="Design digest #75" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
