--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ Let’s collaborate and bring ideas to life!</p>
 
             <li class="clients-item">
               <a href="#">
-                <img src="Assests/xAjmal-Perfumes-Logo.webp.pagespeed.ic.gw-oXxWJ18.webp" alt="client logo">
+                <img src="Assests/images (1).png" alt="client logo">
               </a>
             </li>
 
@@ -1029,7 +1029,7 @@ Let’s collaborate and bring ideas to life!</p>
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="C:\Users\saruu\Pictures\Screenshots\Screenshot 2025-03-12 062940.png" alt="Design digest #80" loading="lazy">
+                  <img src="Assests/Screenshot 2025-03-12 062940.png" alt="Design digest #80" loading="lazy">
                 </figure>
 
                 
@@ -1059,7 +1059,7 @@ Let’s collaborate and bring ideas to life!</p>
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="C:\Users\saruu\Pictures\Screenshots\Screenshot 2025-03-12 065238.png" alt="FII's Activity in Indian Markets" loading="lazy">
+                  <img src="Assests/Screenshot 2025-03-12 065238.png" alt="FII's Activity in Indian Markets" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
