--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ Let’s collaborate and bring ideas to life!</p>
 
             <li class="clients-item">
               <a href="#">
-                <img src="Assests/images (1).png" alt="client logo">
+                <img src="Assests/xAjmal-Perfumes-Logo.webp.pagespeed.ic.gw-oXxWJ18.webp" alt="client logo">
               </a>
             </li>
 
