--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Explore Anas Khalid's portfolio—where UI/UX design meets full-stack development. Discover projects blending computer science, finance, and data-driven innovation from a developer passionate about India's financial future." />
+  <meta name="keywords" content="Anas Khalid, full-stack developer, computer science, quantitative finance, portfolio, web development, UI/UX design, India tech" />
+  <meta name="author" content="Anas Khalid" />
+  <meta property="og:title" content="Anas Khalid | Full-Stack Developer & Quant Enthusiast" />
+  <meta property="og:description" content="Discover the work and passion of Anas Khalid—a developer and finance strategist bridging tech and markets." />
+  <meta property="og:url" content="https://portfolio-website-frontend-pi.vercel.app/" />
+  <meta property="og:type" content="website" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Personal Portfolio</title>
+  <title>Personal Portfolio - Anas Khalid</title>
 
   
   <!--
